# typedmongo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
script/: check.py  fix.py  lint.py  upload.py
tests/: test_index.py  test_types.py
tests/validators/: test_general.py
typedmongo/: __init__.py  definitions.py  exceptions.py  index.py  types.py  utils.py
typedmongo/validators/: __init__.py  base.py  general.py  utils.py
