[tool.poetry]
authors = ["lengyue <lengyue@lengyue.me>", "abersheeran <me@abersheeran.com>"]
description = ""
license = "Apache-2.0"
name = "typedmongo"
readme = "README.md"
version = "0.1.0"

homepage = "https://github.com/typedmongo/typedmongo"
repository = "https://github.com/typedmongo/typedmongo"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "typedmongo"},
]

[tool.poetry.dependencies]
python = "^3.7"
pluggy = "^0.13.1"
bson = "^0.5.10"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^5.4.3"

[tool.black]
line-length = 200

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
